dgkanatsios-practice2/busy-pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy
  name: busy2
spec:
  nodeSelector:
   accelerator: nvidia-tesla-p100
  volumes:
  - name: busy-vol
    persistentVolumeClaim:
     claimName: mypvc
  containers:
  - args:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busy2
    volumeMounts:
    - name: busy-vol
      mountPath: /etc/foo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
