dgkanatsios-practice2/busy-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy
  name: busy
spec:
  volumes:
  - name: empty
    emptyDir: {}
  containers:
  - args:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busy1
    volumeMounts:
    - name: empty
      mountPath: /etc/foo
    resources: {}
  - args:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busy2
    volumeMounts:
    - name: empty
      mountPath: /etc/foo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
