dgkanatsios-practice2/cm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: cm-vol
    configMap:
     name: cmvolume
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: cm-vol
      mountPath: /etc/lala
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
