dgkanatsios-practice2/multi-busy.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy
  name: busy
spec:
  containers:
  - args:
    - sh
    - -c
    - echo hello; sleep 3600
    image: busybox
    name: busy1
    resources: {}
  - image: busybox
    name: busy2
    args:
    - sh
    - -c
    - echo hello; sleep 3600
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
