dgkanatsios-practice2/multi-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: empty-vol
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: empty-vol
      mountPath: /usr/share/nginx/html
  - image: busybox
    name: busybox
    args:
    - sh
    - -c
    - date;wget -O /work-dir/index.html http://neverssl.com/online;sleep 3600;
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: empty-vol
      mountPath: /work-dir
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
