dgkanatsios-practice2/nginx-live.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    readinessProbe:
     httpGet:
        path: /
        port: 80
     initialDelaySeconds: 35
     periodSeconds: 20
    livenessProbe:
      exec:
        command:
        - ls
      initialDelaySeconds: 35
      periodSeconds: 5
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
