dgkanatsios-practice2/nginx-nodespecific.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: v1
  name: nginx4
spec:
  nodeSelector:
   accelerator: nvidia-tesla-p100
  containers:
  - image: nginx
    name: nginx4
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
