dgkanatsios-practice2/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  serviceAccount: myuser
  automountServiceAccountToken: false
  volumes:
  - name: cm-vol
    secret:
     secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: cm-vol
      mountPath: /etc/foo
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
